--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^2.2.0"
+    "react-simple-chatbot": "^0.5.0",
+    "socket.io": "^2.2.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0"
+    "nodemon": "^2.0.22"
   }
 }
